Refactor: Updated README.md to reflect the current status of the project